tests/v2_0/invalid/circular_import_b.devops
version = "v2.0"

// This creates a circular dependency
import "./circular_import_a.devops"

target "b" { address = "localhost:7701" }
